tests/baselines/reference/typeInfer1.errors.txt
typeInfer1.ts(12,5): error TS2353: Object literal may only specify known properties, and 'Moo' does not exist in type 'ITextWriter2'.


==== typeInfer1.ts (1 errors) ====
    interface ITextWriter2 {
        Write(s:string):void;
        WriteLine(s:string):void;
    }
    
    var x: ITextWriter2 = {
        Write: function (s:string):void {},
        WriteLine: function(s:string):void {}
    }
    
    var yyyyyyyy: ITextWriter2 = {
        Moo: function() { return "cow"; }
        ~~~
!!! error TS2353: Object literal may only specify known properties, and 'Moo' does not exist in type 'ITextWriter2'.
    }